<resources>
    <string name="app_name">mobile-computing</string>
    <string name="log_something">log something</string>
    <string name="hello_world">Hello, world!</string>
    <string name="intent_text">Text von abstraktem Intent</string>
    <string name="what_to_log">what to log?</string>
    <string name="mime_text_plain">text/plain</string>
    <string name="what_to_share">what to share?</string>
    <string name="go_back">go back</string>
    <string name="go_to_other">go to other</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="linear">linear</string>
    <string name="relative">relative</string>
    <string name="constraint">constraint</string>
    <string name="image_view_description">description</string>
    <string name="take_photo">take photo</string>
    <string name="image_view_photo_description">photo that has been taken</string>
    <string name="go_to_photo">go to photo</string>
    <string name="button_image">button image</string>
    <string name="go_to_elements">go to elements</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="email">e-mail</string>
    <string name="birthdate">birthdate</string>
    <string name="enter_email">enter e-mail</string>
    <string name="date">date</string>
    <string name="compass">compass</string>
    <string name="go_to_compass">go to compass</string>
    <string name="go_to_sensors">go to sensors</string>
    <string name="temperature">temperature</string>
    <string name="light">light</string>
    <string name="only_coarse">Only coarse location granted. App may not provide whole functionality.</string>
    <string name="no_location">No location permissions granted. App may not work.</string>
    <string name="fine_location">Fine location granted. Perfect!</string>
    <string name="go_to_location">go to location</string>
    <string name="plus_sign">plus sign</string>
    <string name="minus_sign">minus sign</string>
    <string name="location_symbol">location symbol</string>
    <string name="go_to_network">go to network</string>
    <string name="send_http">send http</string>
    <string name="error_parse_response_into_comment">could not parse response into comment</string>
    <string name="json_example_event">{\n\"title\": \"fancy festival\",\n\"startDate\": \"2022-06-23T00:15:00\",\n\"endDate\": \"2022-06-24T15:00:00\",\n\"description\": \"hands down the best festival\",\n\"minPeople\": 42,\n\"maxPeople\": 1337,\n\"picture\": 2131165298,\n\"rating\": 9001\n}</string>
    <string name="create_event">create event</string>
    <string name="go_to_api">go to api</string>
    <string name="load_events">load events</string>
    <string name="response">response:</string>
    <string name="get_event">get event</string>
    <string name="delete_event">delete event</string>
    <string name="go_to_web">go to web</string>
    <string name="editor_shared_preference">editor_shared_preference</string>
    <string name="preferences">preferences</string>
    <string name="file">file</string>
    <string name="database">database</string>
    <string name="save_to">save to</string>
    <string name="load_from">load from</string>
    <string name="editor_content">editor_content</string>
    <string name="go_to_editor">go to editor</string>
    <string name="editor_file">editor_file.txt</string>
    <string name="database_editor">editor-database</string>
    <string name="clear">clear</string>
</resources>