<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuGoToOther"
        android:title="@string/go_to_other" />
    <item
        android:id="@+id/menuGoToPhoto"
        android:title="@string/go_to_photo" />
    <item
        android:id="@+id/menuGoToElements"
        android:title="@string/go_to_elements" />
    <item
        android:id="@+id/menuGoToCompass"
        android:title="@string/go_to_compass" />
    <item
        android:id="@+id/menuGoToSensors"
        android:title="@string/go_to_sensors" />
    <item
        android:id="@+id/menuGoToLocation"
        android:title="@string/go_to_location" />
    <item
        android:id="@+id/menuGoToNetwork"
        android:title="@string/go_to_network" />
</menu>