<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventListViewModel"
            type="ch.hftm.mobilecomputing.viewmodel.EventListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ApiActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/buttonGetEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_events" />

            <Spinner
                android:id="@+id/spinnerEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonGetEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_event" />

                <Button
                    android:id="@+id/buttonDeleteEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/delete_event" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextMultilineEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text='@string/json_example_event'
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event" />

            <TextView
                android:id="@+id/textViewApiResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="monospace" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>